--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,19 @@
 
 /* Your CSS Code here. */
+/* Initial Button State */
+#btn {
+	background-color: black;
+	color: white;
+	border-radius: 5px;
+	border: none;
+	padding: 10px 20px;
+	font-size: 16px;
+	cursor: pointer;
+}
+
+/* Hover State */
+#btn:hover {
+	background-color: yellow;
+	color: black;
+	border-radius: 30px;
+}
